# anti-alecto

./: .gitignore  README.md  config.yml  install.sh  profiles.yml  pyproject.toml
agents/: summarizer.yml  triager.yml
ci/: README.md  detect-secrets.baseline  gitleaks.toml  gitleaksignore  secret-scan.sh
digests/: 2026-04-11_world-info-docs-st-app_b6f47652.md  2026-04-12_1yefuwang1-vectorlite-fast-sql-powered-in-process-vector-search-for-any-language_dcffeb3b.md  2026-04-12_2502-20379-multi-agent-verification-scaling-test-time-compute-with-multiple-veri_e8b37eaf.md  2026-04-12_2506-01463-agentic-ai-and-multiagentic-are-we-reinventing-the-wheel_fe84c05a.md  2026-04-12_2506-12928-scaling-test-time-compute-for-llm-agents_562dc68a.md  2026-04-12_2506-14728-agentdistill-training-free-agent-distillation-with-generalizable-mcp-_515d2be5.md  2026-04-12_2509-20368-latts-locally-adaptive-test-time-scaling_ebc45bf9.md  2026-04-12_2510-00501-codechemist-functional-knowledge-transfer-for-low-resource-code-gener_4c967005.md  2026-04-12_2510-13940-less-is-more-improving-llm-reasoning-with-minimal-test-time-intervent_9c7ed978.md  2026-04-12_2512-08296-towards-a-science-of-scaling-agent-systems_fd4e0bd6.md  2026-04-12_2512-14012-professional-software-developers-don-t-vibe-they-control-ai-agent-use_6384038c.md  2026-04-12_2512-19428-attention-is-not-what-you-need_82dace83.md  2026-04-12_2512-20884-the-silent-scholar-problem-a-probabilistic-framework-for-breaking-epi_d40aee6d.md  2026-04-12_2512-24601-recursive-language-models_3987074d.md  2026-04-12_agent-skills-claude-docs_c5a3d221.md  (+886 more)
(+670 files in other folders)
